--- a/ui/style.css
+++ b/ui/style.css
@@ -21,9 +21,11 @@ body {
 }
 p {
 	font-family: garamond;
-    background-color: lightgrey;
+    background-color: blue;
     margin-top: 75px;
 	font-size:16px
 }
 
-
+container{
+    max-width:200px;
+}
