--- a/ui/style.css
+++ b/ui/style.css
@@ -19,13 +19,13 @@ body {
 .img-medium {
     height: 200px;
 }
-p {
+.p {
 	font-family: garamond;
     background-color: blue;
     margin-top: 75px;
 	font-size:16px
 }
 
-container{
+.container{
     max-width:200px;
 }
