--- a/ui/style.css
+++ b/ui/style.css
@@ -21,7 +21,7 @@ body {
 }
 .p {
 	font-family: garamond;
-    background-color: blue;
+    background-color:green;
     margin-top: 75px;
 	font-size:16px
 }
