--- a/ui/style.css
+++ b/ui/style.css
@@ -20,7 +20,7 @@ body {
     height: 200px;
     margin-left:100px;
 }
-.p {
+p {
 	font-family: garamond;
     background-color:green;
     margin-top: 75px;
@@ -34,4 +34,7 @@ body {
     padding-right:20px;
     margin:0 auto;
     color:red;
+}
+div{
+    
 }
