--- a/ui/style.css
+++ b/ui/style.css
@@ -22,7 +22,7 @@ body {
 }
 p {
 	font-family: garamond;
-    background-color:green;
+    background-color:pink;
     margin-top: 75px;
 	font-size:16px
 }
@@ -33,7 +33,7 @@ p {
     padding-left:20px;
     padding-right:20px;
     margin:0 auto;
-    color:red;
+    color:grey;
 }
 div{
    background-color:white; 
